--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -57,7 +57,7 @@ html{
         color: black;
     }
     &__subtitulo-1{
-        @include bebas-s;
+        @include bebas-xs;
         color: black;
     }
 
