--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -35,6 +35,7 @@
 @import 'pages/sobre-mi';
 @import 'pages/diseno-grafico';
 @import 'pages/ilustracion';
+@import 'pages/alvea-uxui';
 
 @import 'themes/theme';
 @import 'themes/admin';
