--- a/assets/sass/components/_wrapper.scss
+++ b/assets/sass/components/_wrapper.scss
@@ -2,6 +2,7 @@
 .wrapper{
     position: absolute;
     height: 100%;
-    width: 100%;
+    width: 100vw;
+    max-width: 100%;
     z-index: -100;
 }
