--- a/assets/sass/components/_panel.scss
+++ b/assets/sass/components/_panel.scss
@@ -2,7 +2,7 @@
 .panel{
     position: relative;
     width: 100%;
-    height: 100%;
+    max-width: 100%;
     min-height: 100vh;
     z-index: 1000;
 }
