--- a/assets/sass/layout/_articulo-cuerpo.scss
+++ b/assets/sass/layout/_articulo-cuerpo.scss
@@ -22,11 +22,12 @@
     position: relative;
 
     &__barraMenu{
-        z-index: 1030;
+        z-index: 1000;
         height: 50px;
-        width: 100vw;
+        width: 100%;
         position: sticky;
-        top: 0;
+        position: -webkit-sticky;
+        top: 0px;
     }
 
 }
