--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -43,9 +43,10 @@
     background-color: white;
     filter: invert(100%);
     width: 100%;
+    max-width: 100%;
     padding-right: 1%;
     position: fixed;
-    bottom: 0.5vh;
+    bottom: 0.5%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
