--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -36,6 +36,7 @@
 @import 'pages/diseno-grafico';
 @import 'pages/ilustracion';
 @import 'pages/alvea-uxui';
+@import 'pages/vegachica';
 
 @import 'themes/theme';
 @import 'themes/admin';
