--- a/assets/sass/layout/_articulo-header.scss
+++ b/assets/sass/layout/_articulo-header.scss
@@ -64,7 +64,7 @@
         margin-bottom: 80px;
         margin-right: 120px;
         height: 50vh;
-        overflow-y: scroll;
+        overflow-y: hidden;
         overflow-x: hidden;
     }
     &-titulo{
