--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -189,6 +189,53 @@
         transition: box-shadow ease 0.5s;*/
     }
 }
+//boton repetido-negro
+.boton__customBlack{
+    @include bebas-s;
+    mix-blend-mode: normal;
+    background-color: black;
+    text-align: center;
+    padding: 10px 8px 2px 8px;
+    color: white;
+    line-height: 1;
+    white-space: nowrap;
+    
+    & a{
+        color: black;
+        text-decoration: none;
+    }
+
+    & a:hover{
+        color: white;
+        mix-blend-mode: difference;
+    }
+    /*&:not(:hover){
+        animation: hover__botones;
+        -moz-animation: hover__botones;
+        -webkit-animation: hover__botones;
+        -o-animation: hover__botones;
+
+        animation-duration:  0.5s;
+        animation-direction: reverse;
+        animation-timing-function: ease;
+        animation-fill-mode: forwards;
+    }*/
+    &:hover{
+
+        animation: hover__botones-dark;
+        -moz-animation: hover__botones-dark;
+        -webkit-animation: hover__botones-dark;
+        -o-animation: hover__botones-dark;
+
+        animation-duration:  0.5s;
+        animation-timing-function: ease;
+        animation-fill-mode: forwards;
+        /*box-shadow: inset 548px 0.01px 0.01px 0.01px white;
+        color: black;
+        mix-blend-mode: difference;
+        transition: box-shadow ease 0.5s;*/
+    }
+}
 
 
 
