--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11520,6 +11520,10 @@ main {
   align-self: flex-end;
 }
 
+.home {
+  overflow-y: hidden;
+}
+
 .sobremi__hero {
   background-color: black;
   height: 100vh;
