--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10420,6 +10420,13 @@ html {
   color: black;
   font-size: 5.1599587203vh;
 }
+.hero__texto-3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
+  color: black;
+  font-size: 2.6vh;
+}
 .hero__boton-1 {
   font-family: "Bebas Neue", cursive;
   font-weight: 400;
