--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -41,6 +41,11 @@ html{
         color: black;
         font-size: 5.159958720330238vh;
     }
+    &__texto-3{
+        @include montserrat-texto;
+        color: black;
+        font-size: 2.6vh;
+    }
     &__boton-1{
         @include bebas-l;
         font-size: 9vh;
