--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -30,8 +30,9 @@ $sm-x-large: 5rem;
 $sm-large: 4rem;
 $sm-medium: 3rem;
 $sm-small: 2rem;
-$sm-texto: 1.4rem;
+$sm-texto: 1.8rem;
 
 
 /*Peso de fuente*/
 $font-regular: 400;
+$font-bold: 600;
