--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -2,6 +2,9 @@ html, body{
     max-width: 100%;
 
 }
+body{
+    overflow-x: hidden;
+}
 body *{
     margin: 0;
     border: 0;
@@ -11,8 +14,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+small, strike, strong, sub, sup, tt, var, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -26,6 +28,10 @@ time, mark, audio, video {
 	font-size: 10px;
 	font: inherit;
 	vertical-align: baseline;
+}
+
+b{
+    font-weight: 600;
 }
 
 /* make sure to set some focus styles for accessibility */
