--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,6 +21,7 @@
 @import 'layout/forms';
 @import 'layout/articulo-header';
 @import 'layout/articulo-cuerpo';
+@import 'layout/mosaic';
 
 @import 'components/buttons';
 @import 'components/wrapper';
