Added racket rampage section
Added Racket Rampage section

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -83,6 +83,10 @@ html{
         @include bebas-xs;
         line-height: 4rem;
     }
+    &__parrafo-bold-2{
+        @include montserrat-texto-bold;
+        line-height: 4rem;
+    }
     &__parrafo-bold-mv{
         @include bebas-texto;
         line-height: 1rem;
