Added ELVTR section in portfolio
(Still need to fix top bar links, im figuring out what to cut)

--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -84,6 +84,12 @@
     font-size: $lg-texto;
 }
 
+@mixin bebas-lg-subtitulo {
+    font-family: $bebas;
+    font-weight: $font-regular; 
+    font-size: $lg-subtitulo;
+}
+
 /*bebas-MOVIL*/
 
 @mixin bebas-sm-2xl {
