--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -23,6 +23,7 @@ $lg-large: 13rem;
 $lg-medium: 9.5rem;
 $lg-small: 6rem;
 $lg-texto: 3.2rem;
+$lg-subtitulo: 2.3rem;
 
 /*Tamaños de fuente-MOVIL*/
 $sm-xx-large: 6rem;
