--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -9719,6 +9719,12 @@ html {
   font-size: 3.2rem;
   color: black;
 }
+.articulo__subtitulo-3 {
+  font-family: "Bebas Neue", cursive;
+  font-weight: 400;
+  font-size: 2.3rem;
+  color: black;
+}
 .articulo__parrafo-1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
